# hpm_sdk

./: CHANGELOG.md  CMakeLists.txt  README.md  README_zh.md  VERSION  env-tpt.sh  env.cmd  env.sh
components/: CMakeLists.txt  index_en.md  index_en.rst  index_zh.md  index_zh.rst
components/adc/: CMakeLists.txt  hpm_adc.h
components/adc_v2/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_adc_v2.c  hpm_adc_v2.h  hpm_adc_v2_port.c  hpm_adc_v2_port.h
components/camera/: CMakeLists.txt
components/codec/: CMakeLists.txt  hpm_codec_common.h  hpm_codec_control.h
components/debug_console/: CMakeLists.txt  hpm_debug_console.c  hpm_debug_console.h
components/dma_manager/: CMakeLists.txt  hpm_dma_manager.c  hpm_dma_manager.h
components/dma_mgr/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_dma_mgr.c  hpm_dma_mgr.h
components/eeprom_emulation/: CMakeLists.txt  README_en.rst  README_zh.rst  eeprom_emulation.c  eeprom_emulation.h
components/eeprom_hal/: CMakeLists.txt  README_en.rst  README_zh.rst  eeprom_device.h  eeprom_hal.c  eeprom_hal.h
components/enet_phy/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_enet_phy.h  hpm_enet_phy_adaptive.c  hpm_enet_phy_adaptive.h  hpm_enet_phy_adaptive_glue.c  hpm_enet_phy_adaptive_glue.h  hpm_enet_phy_adaptive_util.c  hpm_enet_phy_adaptive_util.h  hpm_enet_phy_common.h  hpm_enet_phy_port.c  hpm_enet_phy_port.h
components/i2c/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_i2c.c  hpm_i2c.h
components/i2s_over_spi/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_i2s_over_spi.c  hpm_i2s_over_spi.h
components/ipc_event_mgr/: hpm_ipc_event_mgr.h
components/jpeg/: CMakeLists.txt  hpm_jpeg.c  hpm_jpeg.h
components/log/: CMakeLists.txt  hpm_log.c  hpm_log.h
components/panel/: CMakeLists.txt  hpm_panel.c  hpm_panel.h
components/pmbus/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_pmbus.c  hpm_pmbus.h  hpm_pmbus_def.h  hpm_pmbus_private.h
components/ppi/: CMakeLists.txt  README_en.md  README_en.rst  README_zh.md  README_zh.rst  hpm_ppi.c  hpm_ppi.h
components/sccb/: CMakeLists.txt  hpm_sccb.h
components/segment_led/: CMakeLists.txt  hpm_segment_led.c  hpm_segment_led.h
components/serial_nor/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_serial_nor.c  hpm_serial_nor.h  hpm_serial_nor_host.h
components/smbus/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_smbus.c  hpm_smbus.h
components/spi/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_spi.c  hpm_spi.h
components/touch/: CMakeLists.txt
components/tsw_phy/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_tsw_phy.h  hpm_tsw_phy_adaptive.c  hpm_tsw_phy_adaptive.h  hpm_tsw_phy_adaptive_glue.c  hpm_tsw_phy_adaptive_glue.h  hpm_tsw_phy_adaptive_util.c  hpm_tsw_phy_adaptive_util.h  hpm_tsw_phy_common.h  hpm_tsw_phy_port.c  hpm_tsw_phy_port.h
components/uart_lin/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_uart_lin.c  hpm_uart_lin.h
middleware/: CMakeLists.txt
middleware/CANopenNode/: CANopen.c  CANopen.h  CMakeLists.txt
middleware/CMSIS/: CMakeLists.txt
middleware/FreeRTOS/: CMakeLists.txt
middleware/agile_modbus/: CMakeLists.txt
middleware/audio_codec/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_audio_codec.h
middleware/azure_rtos/: CMakeLists.txt
middleware/cherryrb/: CMakeLists.txt
middleware/cherrysh/: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_zh.md  chry_shell.c  chry_shell.h  csh.h  csh_config_template.h
middleware/cherryusb/: CMakeLists.txt  VERSION
middleware/coremark/: CMakeLists.txt
middleware/eclipse_threadx/: CMakeLists.txt  VERSION
middleware/erpc/: CHANGELOG  CMakeLists.txt
middleware/esp_hosted_mcu/: CMakeLists.txt
middleware/fatfs/: CMakeLists.txt
middleware/ffmpeg/: CMakeLists.txt  config.h  mp4.h
middleware/freemaster/: CMakeLists.txt
middleware/hpm_math/: CMakeLists.txt  README_en.rst  README_zh.rst  hpm_math.h  hpm_math_tpt.h
middleware/hpm_mcl/: CMakeLists.txt  note.md
middleware/hpm_mcl_v2/: API_COMPATIBILITY_GUIDE_en.rst  API_COMPATIBILITY_GUIDE_zh.rst  CMakeLists.txt  README_en.rst  README_zh.rst  hpm_mcl_cfg.h  hpm_mcl_common.h  hpm_mcl_debug.h  hpm_mcl_math.h  hpm_mcl_physical.h
middleware/hpm_sdmmc/: CMakeLists.txt
middleware/libjpeg-turbo/: CMakeLists.txt  readme.txt
middleware/littlevgl/: CMakeLists.txt  lv_conf.h
middleware/lodepng/: CHANGELOG  CMakeLists.txt
middleware/lvgl/: CMakeLists.txt  lv_conf.h
middleware/lwip/: CMakeLists.txt
middleware/mbedtls/: CMakeLists.txt  VERSION
middleware/microros/: CHANGELOG.rst  CMakeLists.txt  VERSION
middleware/minimp3/: CHANGELOG  CMakeLists.txt
middleware/mquickjs/: CMakeLists.txt  Makefile  README_CN.md  cutils.h  dtoa.c  hpm_stdlib.h  mqjs.c  mqjs_stdlib.c  mquickjs.c  mquickjs.h  mquickjs_build.c
middleware/opener/: CMakeLists.txt  opener_api.h  version.txt
middleware/ptpd/: CMakeLists.txt
middleware/rtthread-nano/: CMakeLists.txt
middleware/rvbacktrace/: CHANGELOG.md  CMakeLists.txt
middleware/segger_rtt/: CMakeLists.txt
middleware/segger_sysview/: CMakeLists.txt  README.md
middleware/tflm/: CHANGELOG  CMakeLists.txt  PORTING_NOTES.md
middleware/tinycrypt/: CMakeLists.txt
middleware/tinyengine/: CMakeLists.txt  README  VERSION
middleware/tinyusb/: CHANGELOG  CMakeLists.txt
middleware/trace_recorder/: CMakeLists.txt  LICENSE.spdx  VERSION  trcAssert.c  trcCounter.c  trcDependency.c  trcDiagnostics.c  trcEntryTable.c  trcError.c  trcEvent.c  trcEventBuffer.c  trcExtension.c  trcHardwarePort.c  trcHeap.c  trcISR.c  trcInternalEventBuffer.c  trcInterval.c  trcMultiCoreEventBuffer.c  trcObject.c  trcPrint.c  trcRunnable.c  trcSnapshotRecorder.c  trcStackMonitor.c  trcStateMachine.c  trcStaticBuffer.c  trcStreamingRecorder.c  trcString.c  trcTask.c  trcTimestamp.c
middleware/tsn/: CMakeLists.txt  VERSION
middleware/ucos_iii/: CMakeLists.txt  VERSION
middleware/vglite/: CMakeLists.txt
middleware/wifi/: CMakeLists.txt
samples/canopen/: CMakeLists.txt  README_en.md  README_en.rst  README_zh.md  README_zh.rst  (+2 more)
soc/: CMakeLists.txt
(+9652 files in other folders)
