# Copyright (c) 2021 HPMicro
# SPDX-License-Identifier: BSD-3-Clause

set(generated_file_path "${__build_dir}/generated")
set(BUILD_INC_DIR ${generated_file_path}/include)
sdk_inc(./)
sdk_inc(./include)
sdk_inc(./config)
if (DEFINED CONFIG_FREERTOS)
    sdk_inc(./kernelports/FreeRTOS/config)
    sdk_inc(./kernelports/FreeRTOS/include)
    sdk_src(./kernelports/FreeRTOS/trcKernelPort.c)
elseif (DEFINED CONFIG_RTTHREAD_NANO)
    sdk_inc(./kernelports/rtthread-nano/config)
    sdk_inc(./kernelports/rtthread-nano/include)
    sdk_src(./kernelports/rtthread-nano/trcKernelPort.c)
    sdk_src(./kernelports/rtthread-nano/trcKernelPortHooks.c)
else()
    sdk_inc(./kernelports/BareMetal/config)
    sdk_inc(./kernelports/BareMetal/include)
    sdk_src(./kernelports/BareMetal/trcKernelPort.c)
endif()

if (DEFINED CONFIG_TRACE_RECORDER_STREAM_MODE)

    sdk_src(trcStreamingRecorder.c)
    sdk_src(trcHeap.c)
    sdk_src(trcEvent.c)
    sdk_src(trcError.c)
    sdk_src(trcDiagnostics.c)
    sdk_src(trcObject.c)
    sdk_src(trcEntryTable.c)
    sdk_src(trcAssert.c)
    sdk_src(trcCounter.c)
    sdk_src(trcDependency.c)
    sdk_src(trcEventBuffer.c)
    sdk_src(trcInternalEventBuffer.c)
    sdk_src(trcInterval.c)
    sdk_src(trcPrint.c)
    sdk_src(trcRunnable.c)
    sdk_src(trcStackMonitor.c)
    sdk_src(trcStateMachine.c)
    sdk_src(trcStaticBuffer.c)
    sdk_src(trcString.c)
    sdk_src(trcTask.c)
    sdk_src(trcTimestamp.c)
    sdk_src(trcISR.c)
    sdk_src(trcExtension.c)
    sdk_src(trcMultiCoreEventBuffer.c)
    add_subdirectory(streamports)
    # Set the default config file
    if (NOT DEFINED CUSTOM_TRACE_RECORDER_CONFIG_PATH)
        configure_file(./config/trcStreamingConfig.txt ${BUILD_INC_DIR}/trcStreamingConfig.h COPYONLY)
        configure_file(./config/trcSnapshotConfig.txt ${BUILD_INC_DIR}/trcSnapshotConfig.h COPYONLY)
        if (DEFINED CONFIG_FREERTOS)
            configure_file(./kernelports/FreeRTOS/config/trcKernelPortStreamConfig.txt ${BUILD_INC_DIR}/trcKernelPortConfig.h COPYONLY)
        elseif (DEFINED CONFIG_RTTHREAD_NANO)
            configure_file(./kernelports/rtthread-nano/config/trcKernelPortStreamConfig.txt ${BUILD_INC_DIR}/trcKernelPortConfig.h COPYONLY)
        else()
            configure_file(./kernelports/BareMetal/config/trcKernelPortStreamConfig.txt ${BUILD_INC_DIR}/trcKernelPortConfig.h COPYONLY)
        endif()
    endif()
else()
    sdk_inc(./streamports/RingBuffer/include)
    sdk_inc(./streamports/RingBuffer/config)
    sdk_src(trcSnapshotRecorder.c)
    # Set the default config file
    if (NOT DEFINED CUSTOM_TRACE_RECORDER_CONFIG_PATH)
        configure_file(./config/trcStreamingConfig.txt ${BUILD_INC_DIR}/trcStreamingConfig.h COPYONLY)
        configure_file(./config/trcSnapshotConfig.txt ${BUILD_INC_DIR}/trcSnapshotConfig.h COPYONLY)
        if (DEFINED CONFIG_FREERTOS)
            configure_file(./kernelports/FreeRTOS/config/trcKernelSnapshotPortConfig.txt ${BUILD_INC_DIR}/trcKernelPortConfig.h COPYONLY)
        elseif (DEFINED CONFIG_RTTHREAD_NANO)
            configure_file(./kernelports/rtthread-nano/config/trcKernelSnapshotPortConfig.txt ${BUILD_INC_DIR}/trcKernelPortConfig.h COPYONLY)
        else()
            configure_file(./kernelports/BareMetal/config/trcKernelSnapshotPortConfig.txt ${BUILD_INC_DIR}/trcKernelPortConfig.h COPYONLY)
        endif()
    endif()
endif()

